# anakin-daemons

./: .cproject  .gitignore  .project  CMakeLists.txt  CompileConfigurations.hpp  README  README-DBConnector.txt  README-Extractor.txt  README-FaceDBConnector.txt  README-FaceExtractor.txt  README-FaceMatcher.txt  README-FaceTrainer.txt  README-How To Test.txt  README-MatcherCacheTest.txt  README-OCR.txt  README-OCR_Demo.txt  README-PatternDBConnector.txt  README-PatternExtractor.txt  README-PatternMatcher.txt  README-PatternMatching.txt  README-PatternTrainer.txt  README-Trainer.txt  README.md  README.txt  Readme - How To Test.txt  Readme - valgrind tests.txt  anakin2.cbp  anakin2.depend  anakin2.layout  anakind.sh  createDBENV.sh  dbtest.cbp  dbtest.depend  dbtest.layout  extractor.cbp  extractor.depend  extractor.layout  main.cpp  main_acceptance_test.cpp  notes.txt  (+2 more)
cmake/: FindPostgreSQL.cmake
configurations/: acceptance.h  index.h  ocr_daemon.h  readme_update.h  unit_testing.h
demo/: detect_face.py  detect_text.py
deployment/: apt.sh  build.sh  init.sh  install.sh  options.sh
includes/: ARPipeline.hpp  ATCPServerSocket.hpp  ATCPSocket.hpp  AUDPServerSocket.hpp  AUDPSocket.hpp  AnakinExceptions.hpp  AnakinFlags.hpp  Barrier.hpp  BasicCameraProcessor.hpp  BasicFlannDetector.hpp  BasicImageProcessor.hpp  CameraDataInput.hpp  CommandRunner.hpp  CompileConfigurations.hpp  Constants.hpp  DBDriver.hpp  DBHistogram.hpp  DBPattern.hpp  DBUser.hpp  DTCPServerSocket.hpp  DataInput.hpp  DataOutput.hpp  DelimiterBasedTCPSocket.hpp  Detector.hpp  DoNothingImageProcessor.hpp  FaceDetector.hpp  FaceMatch.hpp  Flags.hpp  FlannMatchingProcessor.hpp  HTTPListener.hpp  HTTPSocket.hpp  Help.hpp  HistMatch.hpp  Histogram.hpp  HistogramComparator.hpp  HistogramsIO.hpp  ImageComponentExtractor.hpp  ImageDataInput.hpp  ImageInfo.hpp  ImageProcessor.hpp  (+22 more)
includes/connection/: ATCPServerSocket.hpp  ATCPSocket.hpp  AUDPServerSocket.hpp  AUDPSocket.hpp  DTCPServerSocket.hpp  Daemon.hpp  DelimiterBasedTCPSocket.hpp  HTTPListener.hpp  HTTPSocket.hpp  RequestServer.hpp  Server.hpp  ServerSocket.hpp  Socket.hpp
includes/data/: DataInput.hpp  Histogram.hpp  HistogramComparator.hpp  HistogramsIO.hpp  ImageDataInput.hpp  ImageInfo.hpp  Img.hpp  PatternLoader.hpp  RichImg.hpp  SingleImageDataInput.hpp
includes/db/: DBDriver.hpp  DBHistogram.hpp  DBPattern.hpp  DBUser.hpp
includes/logging/: Log.hpp  OutputPolicyFile.hpp
includes/matching/: BasicFlannDetector.hpp  FlannMatchingProcessor.hpp  Match.hpp  SerializableFlannBasedMatcher.hpp
includes/output/: CommunicationFormatterJSON.hpp  DataEnumerates.hpp  DataOutput.hpp  DataOutputWorker.hpp  ICommunicationFormatter.hpp  JSON.h  JSONValue.h  Msj.hpp  ResultWriter.hpp
includes/processing/: AnakinFlags.hpp  BasicFlannTrainer.hpp  CommandRunner.hpp  Flags.hpp  PatternMatchingCommandRunner.hpp  Program.hpp  SFBMCache.hpp  SerializedPatternDataInput.hpp  Trainer.hpp  TrainerCommandRunner.hpp  Worker.hpp
includes/test/: AcceptanceTest.hpp
includes/utils/: BlockingMap.hpp  BlockingQueue.hpp  ClearVector.h  ClearVector.hpp  Constants.hpp  Files.hpp  Flags.hpp  Help.hpp  QuickLZ.hpp  StringUtils.hpp  XMLoader.hpp
lib/: libtbb.so.2  libtbb_preview.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy_debug.so.2  mongoose.c  mongoose.h  quicklz.c  quicklz.h
lib/irml/: libirml_debug.so.1
sql/: Histogram.sql  Landscape.sql  Pattern.sql  Scene.sql  SerializedMatcher.sql  Smatcher_Patterns.sql  User.sql  User_Histograms.sql  User_Landscapes.sql  User_Patterns.sql  User_SerializedMatchers.sql  categories.sql  descriptors.sql  patterns.sql  scenarios.sql  script.sql  trainers.sql  users.sql
src/: ARDrawingContext.cpp  ARPipeline.cpp  ATCPServerSocket.cpp  ATCPSocket.cpp  AUDPServerSocket.cpp  AUDPSocket.cpp  AnakinFlags.cpp  Barrier.cpp  BasicCameraProcessor.cpp  BasicFlannDetector.cpp  BasicImageProcessor.cpp  CameraDataInput.cpp  CommandRunner.cpp  Constants.cpp  DBDriver.cpp  DBHistogram.cpp  DBPattern.cpp  DBUser.cpp  DTCPServerSocket.cpp  DataOutput.cpp  DelimiterBasedTCPSocket.cpp  Detector.cpp  DoNothingImageProcessor.cpp  FaceDetector.cpp  FaceMatch.cpp  Flags.cpp  FlannMatchingProcessor.cpp  HTTPListener.cpp  HTTPSocket.cpp  Help.cpp  HistMatch.cpp  Histogram.cpp  HistogramComparator.cpp  HistogramsIO.cpp  ImageComponentExtractor.cpp  ImageDataInput.cpp  ImageInfo.cpp  Img.cpp  JustShowCameraProcessor.cpp  JustShowImageProcessor.cpp  (+17 more)
src/connection/: ATCPServerSocket.cpp  ATCPSocket.cpp  AUDPServerSocket.cpp  AUDPSocket.cpp  DTCPServerSocket.cpp  DelimiterBasedTCPSocket.cpp  HTTPListener.cpp  HTTPSocket.cpp  RequestServer.cpp  Server.cpp
src/data/: Histogram.cpp  HistogramComparator.cpp  HistogramsIO.cpp  ImageDataInput.cpp  ImageInfo.cpp  Img.cpp  PatternLoader.cpp  RichImg.cpp  SingleImageDataInput.cpp
src/db/: DBDriver.cpp  DBHistogram.cpp  DBPattern.cpp  DBUser.cpp
src/logging/: OutputPolicyFile.cpp
src/main/: common.cpp  face_db_connector.cpp  face_detector.cpp  face_extractor.cpp  face_matcher.cpp  face_trainer.cpp  ocr.cpp  ocr_full.cpp  pattern_db_connector.cpp  pattern_extractor.cpp  pattern_matcher.cpp  pattern_trainer.cpp
src/matching/: BasicFlannDetector.cpp  FlannMatchingProcessor.cpp  Match.cpp  SerializableFlannBasedMatcher.cpp
src/output/: CommunicationFormatterJSON.cpp  DataOutput.cpp  DataOutputWorker.cpp  JSON.cpp  JSONValue.cpp  Msj.cpp  ResultWriter.cpp
src/processing/: AnakinFlags.cpp  BasicFlannTrainer.cpp  CommandRunner.cpp  Flags.cpp  PatternMatchingCommandRunner.cpp  Program.cpp  SFBMCache.cpp  SerializedPatternDataInput.cpp  Trainer.cpp  TrainerCommandRunner.cpp  Worker.cpp
src/utils/: ClearVector.cpp  Constants.cpp  Files.cpp  Help.cpp  QuickLZ.cpp  XMLoader.cpp
test/: AcceptanceTest.cpp  AcceptanceTesting.cpp  CMakeLists.txt  UnitTestSuit.cpp
test/acceptance/: BinaryAcceptanceTesting.cpp  TestTools.cpp  main_acceptance_test.cpp
test/api/: CMakeLists.txt  run.sh
test/kaist/: CMakeLists.txt  run.sh
test/unit/: TestLogging.cpp  main_boost_test.cpp
test/utils/: LocatedWord.cpp  TextLocator.cpp  (+1 more)
(+228 files in other folders)
